force-app/main/default/objects/FSM_TechnicalSpecification__c/FSM_TechnicalSpecification__c.object-meta.xml
<CustomObject>
    <description>SFI-1285</description>
    <label>Technical Specification</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Technical Specification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>