force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_Case__c.field-meta.xml
<CustomField>
    <fullName>FSM_Case__c</fullName>
    <description>SFI-1285</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Technical Specifications</relationshipLabel>
    <relationshipName>Technical_Specifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>