force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_CharacteristicsDescription2__c.field-meta.xml
<CustomField>
    <fullName>FSM_CharacteristicsDescription2__c</fullName>
    <description>SFI-1285</description>
    <label>Characteristics Description 2</label>
    <type>TextArea</type>
</CustomField>