force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_CharacteristicsValue1__c.field-meta.xml
<CustomField>
    <fullName>FSM_CharacteristicsValue1__c</fullName>
    <description>SFI-1285</description>
    <label>Characteristics Value 1</label>
    <type>TextArea</type>
</CustomField>