force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_CharacteristicsValue2__c.field-meta.xml
<CustomField>
    <fullName>FSM_CharacteristicsValue2__c</fullName>
    <label>Characteristics Value 2</label>
    <type>TextArea</type>
</CustomField>