force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_CharacteristicsValue3__c.field-meta.xml
<CustomField>
    <fullName>FSM_CharacteristicsValue3__c</fullName>
    <description>SFI-1285</description>
    <label>Characteristics Value 3</label>
    <type>TextArea</type>
</CustomField>