force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_Class__c.field-meta.xml
<CustomField>
    <fullName>FSM_Class__c</fullName>
    <description>SFI-1285</description>
    <label>Class</label>
    <type>TextArea</type>
</CustomField>