force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_MeterManufacturer__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeterManufacturer__c</fullName>
    <description>SFI-1285</description>
    <label>Meter Manufacturer</label>
    <type>TextArea</type>
</CustomField>