force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_MeterSize__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeterSize__c</fullName>
    <formula>FSM_CharacteristicsValue1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meter Size</label>
    <type>Text</type>
</CustomField>