force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_NoSigDigits__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoSigDigits__c</fullName>
    <formula>FSM_CharacteristicsValue2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Sig Digits</label>
    <type>Text</type>
</CustomField>