force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_OutreaderID__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutreaderID__c</fullName>
    <formula>FSM_CharacteristicsValue4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreader ID</label>
    <type>Text</type>
</CustomField>