force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_ReadingMethod__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReadingMethod__c</fullName>
    <formula>FSM_CharacteristicsValue3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reading Method</label>
    <type>Text</type>
</CustomField>