force-app/main/default/objects/FSM_TechnicalSpecification__c/fields/FSM_SpecialMeterLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_SpecialMeterLocation__c</fullName>
    <description>SFI-1285</description>
    <label>Special Meter Location</label>
    <type>TextArea</type>
</CustomField>