force-app/main/default/objects/FSM_TechnicalSpecification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_Case__c</columns>
    <columns>FSM_CharacteristicsDescription1__c</columns>
    <columns>FSM_CharacteristicsValue1__c</columns>
    <columns>FSM_CharacteristicsDescription2__c</columns>
    <columns>FSM_CharacteristicsValue2__c</columns>
    <columns>FSM_CharacteristicsDescription3__c</columns>
    <columns>FSM_CharacteristicsValue3__c</columns>
    <columns>FSM_CharacteristicsDescription4__c</columns>
    <columns>FSM_CharacteristicsValue4__c</columns>
    <columns>FSM_CharacteristicsDescription5__c</columns>
    <columns>FSM_CharacteristicsValue5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>